changed the user route

--- a/views/user/addAddress.ejs
+++ b/views/user/addAddress.ejs
@@ -16,7 +16,7 @@
     <div class="card-body">
       <form
         method="post"
-        action="/user/submit-address?isCheckout=<%=isCheckout%>"
+        action="/submit-address?isCheckout=<%=isCheckout%>"
       >
         <div class="form-group">
           <label for="AddressType" class="bold-label">Address Type :</label>
