--- a/views/user/forgotPassword.ejs
+++ b/views/user/forgotPassword.ejs
@@ -119,7 +119,7 @@
 
             await axios({
               method: 'post',
-              url:'/user/send-otp-forgot',
+              url:'/send-otp-forgot',
               data: {
               email: email
               }
@@ -147,7 +147,7 @@
                 // console.log(enteredOtp);
                 await axios({
                   method:"post",
-                  url:"/user/verify-forgot-otp",
+                  url:"/verify-forgot-otp",
                   data:{
                     OTP:enteredOtp
                   }
@@ -178,7 +178,7 @@
 
                     await axios({
                       method:"post",
-                      url:"/user/reset-password",
+                      url:"/reset-password",
                       data:{
                         password:newPassword,
                         confirmPassword:newCPassword,
@@ -198,7 +198,7 @@
                       })
                       // axios("/user/login")
                       setTimeout(()=>{
-                        window.location.href="/user/login"
+                        window.location.href="/login"
                       },3000)
                     }
                     })
