--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -48,7 +48,7 @@
                           <%=locals.message%>
                         </div>
                       </div>
-                      <form method="post" action="/user/login-home">
+                      <form method="post" action="/login-home">
                         <div class="form-group">
                           <input
                             type="text"
@@ -94,7 +94,7 @@
                         <div
                           class="login_footer form-group align-items-center justify-content-end"
                         >
-                          <a class="text-muted" href="/user/load-forgot-pass"
+                          <a class="text-muted" href="/load-forgot-pass"
                             >Forgot password?</a
                           >
                         </div>
@@ -112,7 +112,7 @@
                         </div>
                         <div class="text-muted text-center">
                           Don't have an account?
-                          <a href="/user/signup">Create Account</a>
+                          <a href="/signup">Create Account</a>
                         </div>
                       </form>
                     </div>
