--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -384,7 +384,7 @@
                       <%if(orderDetails.orderStatus == "Delivered"){%>
                       <div class="mx-3">
                         <a
-                          href="/user/return-order/<%= orderDetails._id%>"
+                          href="/return-order/<%= orderDetails._id%>"
                           class="btn btn-sm"
                           style="background-color: #e10f0f; border: #e10f0f"
                           >Return Order</a
@@ -393,7 +393,7 @@
                       <%}else if(orderDetails.orderStatus != "Order Failed"){%>
                       <div class="mx-3">
                         <a
-                          href="/user/cancel-order/<%= orderDetails._id%>"
+                          href="/cancel-order/<%= orderDetails._id%>"
                           class="btn btn-sm"
                           style="background-color: #e10f0f; border: #e10f0f"
                           >Cancel Order</a
@@ -404,7 +404,7 @@
                     <%}%>
 
                     <div class="mx-3">
-                      <a href="/user/" class="btn btn-sm">Continue Shopping</a>
+                      <a href="/" class="btn btn-sm">Continue Shopping</a>
                     </div>
                   </div>
 
@@ -427,7 +427,7 @@
         const productId = this.getAttribute("product-id");
         const orderId = this.getAttribute("order_id");
         await fetch(
-          `/user/single-cancel-order?orderId=${orderId}&productStatusId=${productId}`,
+          `/single-cancel-order?orderId=${orderId}&productStatusId=${productId}`,
           {
             method: "post",
             headers: {
@@ -446,7 +446,7 @@
                 showConfirmButton: false,
               });
               setTimeout(() => {
-                window.location.href = `/user/order-status-details?orderRefId=${data.orderRefId}`;
+                window.location.href = `/order-status-details?orderRefId=${data.orderRefId}`;
               }, 1400);
             } else {
               Swal.fire({
