--- a/views/user/orderSuccess.ejs
+++ b/views/user/orderSuccess.ejs
@@ -12,8 +12,8 @@
             </p>
           </div>
           <div class="d-flex justify-content-center">
-            <a href="/user/" class="btn btn-sm mx-2">Continue Shopping</a>
-            <a href="/user/profile" class="btn btn-sm mx-2">View Orders</a>
+            <a href="/" class="btn btn-sm mx-2">Continue Shopping</a>
+            <a href="/profile" class="btn btn-sm mx-2">View Orders</a>
           </div>
         </div>
       </div>
