--- a/views/user/partials/footer.ejs
+++ b/views/user/partials/footer.ejs
@@ -103,10 +103,10 @@
           <div class="col-lg-2 col-md-3">
             <h5 class="widget-title wow fadeIn animated">My Account</h5>
             <ul class="footer-list wow fadeIn animated">
-              <li><a href="/user/signup">Sign In</a></li>
-              <li><a href="/user/load-cart">View Cart</a></li>
-              <li><a href="/user/load-wishlist">My Wishlist</a></li>
-              <li><a href="/user/profile">Order</a></li>
+              <li><a href="/signup">Sign In</a></li>
+              <li><a href="/load-cart">View Cart</a></li>
+              <li><a href="/load-wishlist">My Wishlist</a></li>
+              <li><a href="/profile">Order</a></li>
             </ul>
           </div>
           <div class="col-lg-4">
