--- a/views/user/productdetails.ejs
+++ b/views/user/productdetails.ejs
@@ -749,7 +749,7 @@
               event.preventDefault();
               const productId = element.getAttribute("prdctId");
               try {
-                const response = await axios.post(`/user/add-to-wishlist?productId=${productId}`)
+                const response = await axios.post(`/add-to-wishlist?productId=${productId}`)
                 const data = response.data
                 if(data){
                   Swal.fire({
@@ -782,7 +782,7 @@
             const productId = element.getAttribute("prdctId");
       
             try {
-              const response = await axios.post("/user/add-to-cart", {
+              const response = await axios.post("/add-to-cart", {
                 productId: productId,
               })
               const data = response.data;
@@ -796,7 +796,7 @@
                 });
               }else if(data.productExsist){
                 setTimeout(()=>{
-                  window.location.href=`/user/load-cart?quantity=${data.quantity}&productId=${data.productId}`
+                  window.location.href=`/load-cart?quantity=${data.quantity}&productId=${data.productId}`
                 })
               } else {
                 Swal.fire({
