--- a/views/user/salesPage.ejs
+++ b/views/user/salesPage.ejs
@@ -20,7 +20,7 @@
               <div class="product-img product-img-zoom">
                 <% if (e && e.images && e.images.length > 0 && e.images[0].path)
                 { %>
-                <a href="/user/product-details/<%= e._id%>">
+                <a href="/product-details/<%= e._id%>">
                   <!-- BODY HOME FIRST IMAGE -->
                   <img
                     class="default-img"
@@ -108,7 +108,7 @@
         const productId = element.getAttribute("prdctId");
 
         try {
-          const response = await axios.post("/user/add-to-cart", {
+          const response = await axios.post("/add-to-cart", {
             productId: productId,
           });
           const data = response.data;
@@ -122,7 +122,7 @@
             });
           } else if (data.productExsist) {
             setTimeout(() => {
-              window.location.href = `/user/load-cart?quantity=${data.quantity}&productId=${data.productId}`;
+              window.location.href = `/load-cart?quantity=${data.quantity}&productId=${data.productId}`;
             });
           } else {
             Swal.fire({
@@ -153,7 +153,7 @@
         const productId = element.getAttribute("prdctId");
         try {
           const response = await axios.post(
-            `/user/add-to-wishlist?productId=${productId}`
+            `/add-to-wishlist?productId=${productId}`
           );
           const data = response.data;
           if (data) {
