--- a/views/user/productdetails.ejs
+++ b/views/user/productdetails.ejs
@@ -718,21 +718,23 @@
                 </div>
               </div>
               <%}%>
-              <div
-                class="banner-img banner-big wow fadeIn f-none animated mt-50"
-              >
-                <img
-                  class="border-radius-10"
-                  src="../../userassets/imgs/banner/banner-4.png"
-                  alt=""
-                />
-                <div class="banner-text">
-                  <h4 class="mb-15 mt-40">Repair Services</h4>
-                  <h2 class="fw-600 mb-20">
-                    We're an Apple <br />Authorised Service Provider
-                  </h2>
-                </div>
-              </div>
+<div class="banner-container">
+  <!-- Text on the left -->
+  <div class="banner-text">
+    <h4 class="subtitle">The Future</h4>
+    <h2 class="title">
+      We're a trusted <br /> Partner of the brands.
+    </h2>
+  </div>
+
+  <!-- Image on the right -->
+  <img
+    class="banner-img"
+    src="../../userassets/imgs/theme/veeLap.png"
+    alt="Banner"
+  />
+</div>
+
             </div>
           </div>
         </div>
